brat/test/golden/error/vecpat2.brat.golden
Error in test/golden/error/vecpat2.brat@FC {start = Pos {line = 3, col = 6}, end = Pos {line = 3, col = 13}}:
fst3(some(x)) = none
     ^^^^^^^

  "some" is not a valid constructor for type Vec

